# OWT-AI-RAG

01-simple-llm-app-v1/: 001-simpleTranslator.py  002-simpleTranslatorBuiltInSpanish.py  pyproject.toml  zzz-nb001-simple-llm-app.ipynb
02-advanced-chatbot/: 002-advanced-chatbot.py  messages.json  pyproject.toml  zzz-nb001-simple-chatbot.ipynb  zzz-nb002-advanced-chatbot.ipynb
03-simple-retriever-app/: 001-retriever-app.py  pyproject.toml  zzz-nb001-retriever-app.ipynb
04-simple-agent/: .env.example  001-simple-agent.py  pyproject.toml  zzz-nb001-simple-agent.ipynb
05-simple-rag/: 001-simple-rag.py  pyproject.toml  zzz-nb001-simple-rag.ipynb
06-conversational-rag/: 001-conversational-rag.py  pyproject.toml  zzz-nb001-conversational-rag.ipynb
07-qa-from-sql/: 001-qa-from-sql.py  pyproject.toml  zzz-nb001-qa-from-sql.ipynb
08-qa-from-pdf/: 001-qa-from-pdf.py  pyproject.toml  zzz-nb001-qa-from-pdf.ipynb
09-key-data-extraction/: 001-key-data-extraction.py  pyproject.toml  zzz-nb001-key-data-extraction.ipynb
10-sentiment-analysis/: 001-sentiment-analysis.py  pyproject.toml  zzz-nb001-sentiment-analysis.ipynb
b401/: 001-connect-llm.py  002-trying-different-llm-models.py  003-prompt-templates.py  004-chains.py  005-output-parsers.py  pyproject.toml  zzz-nb001-connect-llm.ipynb  zzz-nb002-trying-different-llm-models.ipynb  zzz-nb003-prompt-templates.ipynb  zzz-nb004-chains.ipynb  zzz-nb005-output-parsers.ipynb
b402/: 001-data-loaders.py  002-splitters.py  003-embeddings.py  004-vector-stores.py  005-retrievers.py  006-top-k.py  007-rag-with-lcel.py  pyproject.toml  zzz-nb001-data-loaders.ipynb  zzz-nb003-splitters.ipynb  zzz-nb004-embeddings.ipynb  zzz-nb005-vector-stores.ipynb  zzz-nb006-retrievers.ipynb  zzz-nb007-top-k.ipynb  zzz-nb008-rag-with-lcel.ipynb
b403/: 001-simple-chain.py  002-legacy-vs-lcel-chain.py  003-runnable-exec-order.py  004-invoke-stream-batch.py  005-builtin-runnables.py  006-builtin-functions-for-runnables.py  007-combining-chain.py  008-lcel-chains-in-rag.py  zzz-nb001-simple-chain.ipynb  zzz-nb002-intro-lcel.ipynb  zzz-nb003-runnable-order.ipynb  (+5 more)
(+15 files in other folders)
